@@ -1,7 +1,7 @@
 e99a7f7c68c19f3f8575ff50a75f60fc net.rieter.xot.channel.be.een/eenfanart.jpg
 51d20f0bb359833c1f26234021c371ab net.rieter.xot.channel.be.ketnet/ketnetfanart.jpg
+a4910d4288e9682b3fa7287355df7818 net.rieter.xot.channel.be.sporza/sportzafanart.jpg
 48de8e00ef1a7ee3b33a7247674c01ba net.rieter.xot.channel.be.vier/vierfanart.jpg
-a4910d4288e9682b3fa7287355df7818 net.rieter.xot.channel.be.vrtnew/sportzafanart.jpg
 a4bc4ea8861a9b97a35424436e4f0c9d net.rieter.xot.channel.be.vtm/vtmfanart.jpg
 455b9f077edd5d01ed5e98fa352a0ff3 net.rieter.xot.channel.be.canvas/canvasfanart.png
 06688466a2811f41ca9edff5c27b958a net.rieter.xot.channel.be.canvas/canvasimage.png
@@ -15,12 +15,12 @@ e7c0837e1ae3896d7d217cde67382526 net.rieter.xot.channel.be.ketnet/cobralarge.png
 de3c446d18353afdedb2e5d1c14d33f7 net.rieter.xot.channel.be.rtbf/rtbffanart.png
 f572175fe389e1dca6a71b088a104b5c net.rieter.xot.channel.be.rtbf/rtbficon.png
 dcfed4f186454e6df601cbf95b777595 net.rieter.xot.channel.be.rtbf/rtbfimage.png
+83bc777cc1ae0c36d708515eca871c46 net.rieter.xot.channel.be.sporza/sporzaimage.png
+50c047dc882bd3c4e65e6a0f2afecb28 net.rieter.xot.channel.be.sporza/sporzalarge.png
 61cabd35d6d289be9a563cd1ac44a2f1 net.rieter.xot.channel.be.vier/viericon.png
 e85691ffb826494d41454ba2129d1350 net.rieter.xot.channel.be.vier/vierimage.png
 f24d2b7ed580b32da1523addf61c6167 net.rieter.xot.channel.be.vrtnew/redactiefanart.png
 16e73ee15476828d72d4bd5807c0a53c net.rieter.xot.channel.be.vrtnew/redactieimage.png
 7b892be2b65921324dc848674dda56d4 net.rieter.xot.channel.be.vrtnew/redactielarge.png
-83bc777cc1ae0c36d708515eca871c46 net.rieter.xot.channel.be.vrtnew/sporzaimage.png
-50c047dc882bd3c4e65e6a0f2afecb28 net.rieter.xot.channel.be.vrtnew/sporzalarge.png
 a2334d36b4274a6119308600b22f73a7 net.rieter.xot.channel.be.vtm/vtmimage.png
 26d05671f1b96556342e5ce9041300df net.rieter.xot.channel.be.vtm/vtmlarge.png
