@@ -10,18 +10,6 @@
       "sortorder": 10,
       "language": "be",
       "fanart": "redactiefanart.png"
-    },
-    {
-      "guid": "71128378-B6BA-11E0-A68A-1B434824019B",
-      "name": "Sporza",
-      "description": "Online uitzendingen van www.sporza.be.",
-      "icon": "sporzalarge.png",
-      "category": "National",
-      "channelcode": "sporza",
-      "sortorder": 13,
-      "language": "be",
-      "compatible": "Environments.All",
-      "fanart": "sportzafanart.jpg"
     }
   ]
 }
